# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: tests.yml
gendiff/: __init__.py  engine.py  formaters.py  stylish.py
gendiff/scripts/: gendiff.py
gendiff/tests/: test_engine.py
gendiff/tests/fixtures/: deep1.yaml  deep2.yaml  deep_answer.json  flat_answer
