[tool.poetry]
packages = [
  { include = "gendiff" },
]
name = "hexlet-code"
version = "0.1.0"
description = "Difference manager"
authors = ["STEVS"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"
